@@ -47,8 +47,8 @@ bitVect *newBitVect (int);
 void freeBitVect (bitVect *);
 bitVect *bitVectResize (bitVect *, int);
 bitVect *bitVectSetBit (bitVect *, int);
-void bitVectUnSetBit (bitVect *, int);
-int bitVectBitValue (bitVect *, int);
+void bitVectUnSetBit (const bitVect *, int);
+int bitVectBitValue (const bitVect *, int);
 bitVect *bitVectUnion (bitVect *, bitVect *);
 bitVect *bitVectIntersect (bitVect *, bitVect *);
 int bitVectBitsInCommon (bitVect *, bitVect *);
